--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html, body {
   max-width: 1378px;
   margin: 0px auto;
 }
+/* Шапка сайта */
 .header__logo {
   background: url('Tesla-Wordmark-Red.png');
   position: absolute;
