--- a/style.css
+++ b/style.css
@@ -1,20 +1,3 @@
-
-*,*: before, *: after{
-  padding: 0;
-  margin: 0;
-  border: 0;
-  box-sizing: border-box;
-}
-html, body {
-  background: #E5E5E5;
-  max-width: 1378px;
-}
-.container {
-  background: #E5E5E5;
-  max-width: 1378px;
-  margin: 0px auto;
-}
-/* Шапка сайта */
 .header__logo {
   position: absolute;
   width: 166px;
@@ -22,32 +5,185 @@ html, body {
   left: 42.72px;
   top: 24px;
 }
-.header__menu {
+.menu__link_models {
   position: absolute;
-  width: 1337.28px;
-  height: 51px;
-  left: 42.72px;
-  top: 24px;
-}
-
-.header__link {
-  color: black;
-  text-transform: uppercase;
-  font-size: 12px;
-  font: Montserrat;
-  text-decoration: none;
+  width: 62px;
+  height: 19px;
+  left: 466.86px;
+  top: 40px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
   line-height: 18px;
-  }
-  .drive__title {
-    display: block;
-    text-align: center;
-    align-items: center;
-  }
-.drive__backgroundtesla {
+}
+.menu__link_modelX {
+  position: absolute;
+  width: 63px;
+  height: 19px;
+  left: 592px;
+  top: 40px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+}
+.menu__link_model3 {
+  position: absolute;
+  width: 61px;
+  height: 19px;
+  left: 679.86px;
+  top: 40px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+}
+.menu__link_roadster {
+  position: absolute;
+  width: 70px;
+  height: 19px;
+  left: 784.86px;
+  top: 40px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+}
+.menu__link_energy {
+  position: absolute;
+  width: 55px;
+  height: 19px;
+  left: 900.86px;
+  top: 40px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+}
+.menu__link_shop {
+  position: absolute;
+  width: 69px;
+  height: 19px;
+  left: 1177px;
+  top: 40px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+}
+.menu__link_enter {
+  position: absolute;
+  width: 50px;
+  height: 19px;
+  left: 1276px;
+  top: 40px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+}
+/*Первая секция сайта */
+.title__models-black {
+  position: absolute;
+  width: 370px;
+  height: 110px;
+  left: 535px;
+  top: 133px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 90px;
+  line-height: 110px;
+}
+.title__second-title {
+  position: absolute;
+  width: 241px;
+  height: 19px;
+  left: 600px;
+  top: 233px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+}
+.drive__red_car {
+  position: absolute;
+  width: 968px;
+  height: 450px;
+  left: 199px;
+  top: 278px;
+}
+.drive__speed {
+  position: absolute;
+  width: 150px;
+  height: 58px;
+  left: 381px;
+  top: 754px;
+}
+.drive__cruising {
+  position: absolute;
+  width: 150px;
+  height: 58px;
+  left: 597.5px;
+  top: 754px;
+}
+.drive__test {
+  position: absolute;
+  width: 89px;
+  height: 18px;
+  left: 830px;
+  top: 777px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 16px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.drive__background_tesla {
   position: absolute;
   width: 1514px;
   height: 467px;
   left: -74px;
   top: 134px;
   opacity: 0.1;
+}
+.drive__button_color_red {
+  position: absolute;
+  width: 147px;
+  height: 24px;
+  left: 966px;
+  top: 776px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 16px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #E51937;
+  width: 160px;
+  height: 40px;
+  left: 959px;
+  top: 765px;
+  border: 2px solid #E51937;
+  box-sizing: border-box;
+  background: white;
+}
+.drive__vector {
+  position: absolute;
+  width: 28px;
+  height: 14px;
+  left: 706px;
+  top: 849px;
 }
