--- a/style.css
+++ b/style.css
@@ -11,13 +11,15 @@
   margin-top: 24px;
 }
 .header__menu {
+  font-family: 'Montserrat';
   margin-top: 16px;
   margin-left: 258.14px;
 }
 .menu__link_models {
   width: 62px;
   height: 19px;
-  font-family: Montserrat;
+
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 600;
   font-size: 15px;
@@ -112,7 +114,7 @@
   width: 241px;
   height: 19px;
   margin-left: 600px;
-  font-family: Montserrat-Light;
+  font-family: 'Montserrat-Light';
   font-weight: 600;
   font-size: 15px;
   line-height: 18px;
